# qaguru-python-18

./: pyproject.toml
tests/: __init__.py  conftest.py  test_fixtures.py  test_parametrize.py  test_skip.py
tests/models/: github_home_page.py
